2005-06-01 Paul Jakma <paul.jakma@sun.com>

	* rip_interface.c: Fix authentication, no-auth impossible to specify
	  (rip_interface_new) default to RIP_NO_AUTH
	  (rip_interface_reset) ditto
	  (rip_interface_config_write) write out config for simple
	  
2005-05-29 Paul Jakma <paul@dishone.st>

	* ripd.c: (rip_output_process) fix error which crept in my
	  previous rip auth untanglement commit - it had become impossible
	  to not have authentication (even for v1).
	
2005-05-28 Hasso Tepper <hasso at quagga.net>

	* rip_routemap.c: Fix set_metric_addsub_cmd help, it's not about BGP
	  metric.

2005-05-26 Hasso Tepper <hasso at quagga.net>

	* rip_routemap.c: In case of '0.0.0.0' used as 'nexthop', use sender
	  address as nexthop in routemap.

2005-05-26 Hasso Tepper <hasso at quagga.net>

	* rip_routemap.c: Make "match interface" routemap command match both -
	  in and out interfaces.

2005-05-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* rip_interface.c (rip_interface_add): Need to call
	  rip_passive_interface_apply (was already calling it in
	  rip_interface_up).

2005-04-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* rip_zebra.c (rip_redistribute_set, rip_redistribute_unset,
	  rip_redistribute_clean): Change 2nd arg to zebra_redistribute_send
	  from zclient->sock to zclient.

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* rip_interface.c: (rip_interface_delete) After deleting, set
	  ifp->ifindex to IFINDEX_INTERNAL.

2005-02-04 Paul Jakma <paul@dishone.st>

	* ripd.c: Untangle the construction of RIP auth data.
	  (rip_auth_prepare_str_send) new helper function, prepare
	  correct key string.
	  (rip_auth_simple_write) new helper, write out the
	  rip simple password auth psuedo-RTE.
	  (rip_auth_md5_ah_write) new helper, write out the
	  MD5 auth-header psuedo-RTE.
	  (rip_auth_header_write) new helper, write out correct
	  auth header data / psuedo-RTE.
	  (rip_auth_md5_set) rip out the memmove and writing of the